--- a/deploy/kustomize/base/aspnet-core-app-route.yaml
+++ b/deploy/kustomize/base/aspnet-core-app-route.yaml
@@ -1,9 +1,9 @@
 apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
-  labels:
-    app: aspnet-core-app
   name: aspnet-core-app
+  annotations:
+    argocd.argoproj.io/sync-wave: "2"
 spec:
   port:
     targetPort: 8080-tcp
