--- a/deploy/kustomize/base/redis-deployment.yaml
+++ b/deploy/kustomize/base/redis-deployment.yaml
@@ -1,9 +1,9 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  labels:
-    app: aspnet-core-redis
   name: aspnet-core-redis
+  annotations:
+    argocd.argoproj.io/sync-wave: "1"
 spec:
   replicas: 1
   selector:
