--- a/deploy/kustomize/base/redis-service.yaml
+++ b/deploy/kustomize/base/redis-service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  labels:
-    app: aspnet-core-redis
   name: aspnet-core-redis
+  annotations:
+    argocd.argoproj.io/sync-wave: "1"
 spec:
   ports:
     - name: 6379-tcp
