--- a/deploy/kustomize/overlays/prod/kustomization.yaml
+++ b/deploy/kustomize/overlays/prod/kustomization.yaml
@@ -3,8 +3,15 @@ kind: Kustomization
 
 bases:
 - ../../base
+- aspnet-core-apps-prod-ns.yaml
+- aspnet-core-apps-prod-rb.yaml
 
 images:
 - name: quay.io/kskels/aspnet-core-app
   newTag: v1.1
 namespace: dotnet-apps-prod
+
+replicas:
+- name: aspnet-core-app
+  count: 3
+
