Fix to deploymen manifests
Signed-off-by: Kaspars Skels <kaspars.skels@gmail.com>

--- a/deploy/kustomize/overlays/prod/kustomization.yaml
+++ b/deploy/kustomize/overlays/prod/kustomization.yaml
@@ -3,8 +3,8 @@ kind: Kustomization
 
 bases:
 - ../../base
-- aspnet-core-apps-prod-ns.yaml
-- aspnet-core-apps-prod-rb.yaml
+- aspnet-core-app-prod-ns.yaml
+- aspnet-core-app-prod-rb.yaml
 
 images:
 - name: quay.io/kskels/aspnet-core-app
