--- a/deploy/kustomize/overlays/prod/aspnet-core-app-prod-ns.yaml
+++ b/deploy/kustomize/overlays/prod/aspnet-core-app-prod-ns.yaml
@@ -1,7 +1,9 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: dotnet-apps-prod
+  name: dsotnet-apps-prod
+  annotations:
+    argocd.argoproj.io/sync-wave: "0"
 spec:
   finalizers:
   - kubernetes
